Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68586

QFileSystemWatcher prints unnecessary warnings when adding paths

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.11.2
    • 5.11.0
    • Core: I/O
    • None
    • Linux
    • f7c8a991c300f99da808ef2657b16a976c1dfc7a

      QFileSystemWatcher watcher;
      watcher.addPath("");
      watcher.addPath("nonexisting");
      watcher.addPaths(QStringList());
      watcher.addPaths(QStringList("nonexisting"));
      

      Running the code prints following messages

      QFileSystemWatcher::addPath: path is empty
      inotify_add_watch("nonexisting") failed: "No such file or directory"
      QFileSystemWatcher::addPaths: list is empty
      inotify_add_watch("nonexisting") failed: "No such file or directory"
      

      I don't think that any of those is relevant. 

        For Gerrit Dashboard: QTBUG-68586
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            tomyrii Tomi Yritys
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes